--- a/NewCode/Resource.resx
+++ b/NewCode/Resource.resx
@@ -121,4 +121,7 @@
   <data name="HelpFile" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\HelpFile.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;gb2312</value>
   </data>
+  <data name="MyInfo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\MyInfo.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;gb2312</value>
+  </data>
 </root>
